@@ -55,8 +55,6 @@
  ==========================================================
 */
 
-#include "openjpeg_mangle_private.h"
-
 /* Ignore GCC attributes if this is not GCC */
 #ifndef __GNUC__
 	#define __attribute__(x) /* __attribute__(x) */
