@@ -5,6 +5,13 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+November 9, 2011
+* [mickael] WIP: fix get_decoded_tile function to avoid error with output image
+* [mickael] fix bug with mj2 applications (credit to winfried)
++ [mickael] enhance mj2 when read jp2h (credit to winfried)
++ [mickael] check if the file extension is the same as the infile format (credit to winfried)
++ [jmalik] add some sanity check in CMakeLists to prevent STRING(REGEX..) call issues
+
 November 8, 2011
 + [mickael] WIP: add get_decoded_tile functionality
 + [mickael] WIP: clean and enhance j2K file
